test_suite/tests/ui/precondition/deserialize_de_lifetime.stderr
error: cannot deserialize when there is a lifetime parameter called 'de
 --> $DIR/deserialize_de_lifetime.rs:4:10
  |
4 | struct S<'de> {
  |          ^^^
